--- a/webserver/templates/course.html
+++ b/webserver/templates/course.html
@@ -1,6 +1,8 @@
 <!--
     This template need from flask:
-    courses[()]: A list of tuples of (id: int, coursename: string) for each course names
+    course_id: Integer of the id
+    course_name: A string
+    TA_data[{}]: A list of dictionaries of TA name, id & nethz
 -->
 
 <!DOCTYPE html>
@@ -57,15 +59,22 @@
 </nav>
 
 
-<ul class="list-group">
-    {% for (id, course_name) in courses %}
-        <a href="course?id={{ id }}">
-            <li class="list-group-item">
-                {{ course_name }}
-            </li>
-        </a>
-    {% endfor %}
-</ul>
+<p class="h2" style="padding: 20px"> {{ course_name }} </p>
+
+<div class="card">
+    <h5 class="card-header">Teaching Assistants</h5>
+
+    <ul class="list-group list-group-flush">
+        {% for TA in TA_data %}
+            <a href="main_profile?TA_id={{ TA['id'] }}&course_id={{ course_id }}">
+                <li class="list-group-item">
+                    {{ TA['name'] }}
+                </li>
+            </a>
+        {% endfor %}
+    </ul>
+</div>
+
 </body>
 
 </html>
