Just removed a word

--- a/webserver/templates/userLogin.html
+++ b/webserver/templates/userLogin.html
@@ -30,13 +30,16 @@
 <body>
 
     <div class="container col-md-4 col-offset-4" style="margin-top: 90px">
-        <h1 class="form-heading">Login Form</h1>
+        <h1 class="form-heading">Login</h1>
             <div class="login-form">
                 <div class="main-div">
+
                     <div class="panel">
                         <p>Please enter your nethz username and password</p>
                     </div>
+                    
                     <form id="Login">
+
                         <div class="form-group">
                             <input type="email" class="form-control" id="inputEmail" placeholder="Username">
                         </div>
@@ -46,6 +49,7 @@
                             <input type="password" class="form-control" id="inputPassword" placeholder="Password">
                 
                         </div>
+                        
                         <button type="submit" class="btn btn-primary">Login</button>
                 
                     </form>
