--- a/webserver/templates/course.html
+++ b/webserver/templates/course.html
@@ -66,7 +66,7 @@
 
     <ul class="list-group list-group-flush">
         {% for TA in TA_data %}
-            <a href="main_profile?TA_id={{ TA['id'] }}&course_id={{ course_id }}">
+            <a href="main_profile.html?TA_id={{ TA['id'] }}&course_id={{ course_id }}">
                 <li class="list-group-item">
                     {{ TA['nethz'] }}
                 </li>
