--- a/webserver/templates/main_profile.html
+++ b/webserver/templates/main_profile.html
@@ -6,7 +6,7 @@ attributes -> attribute.title
 			attribute.percentage
 comments -> comment.title
 			comment.text
-			comment.lik_count
+			comment.like_count
 			comment.author
 #}
 <html>
