I don't know what I did anymore, my bed is calling...

--- a/webserver/templates/main_profile.html
+++ b/webserver/templates/main_profile.html
@@ -73,7 +73,6 @@ nethzName
         <div class="col-sm">
             <h2>
                 Attributes
-                <a href="#" class="btn btn-primary float-md-right" style="margin:5px">Add/Edit Feedback</a>
             </h2>
            <div class="card-rows">
            <div class="card w-100">
@@ -96,7 +95,7 @@ nethzName
         <div class="col-sm">
             <h2>
                 Comments
-                <a href="#" class="btn btn-primary float-md-right" style="margin:5px">Add/Edit Comment</a>
+                <a href="#" class="btn btn-primary float-md-right" style="margin:5px">Add Comment</a>
             </h2>
             <div class="card-rows">
                 {% for comment in comments %}
