removed unecessary div

--- a/webserver/templates/main_profile_edit.html
+++ b/webserver/templates/main_profile_edit.html
@@ -144,8 +144,7 @@ nethzName
                 <a href="#" class="btn btn-primary float-md-right" style="margin:5px">Save Feedback</a>
             </h2>
 
-            <div class="card-rows">
-                <div class="card w-100">
+                <div class="w-100">
                     <ul class="list-group  list-group-flush">
                         {% for attribute in attributes %}
                         <li class="list-group-item">
@@ -180,7 +179,6 @@ nethzName
                         {% endfor %}
                     </ul>
                 </div>
-            </div>
 
         </div>
         <div class="col-sm">
