fixed edit page

--- a/webserver/templates/main_profile.html
+++ b/webserver/templates/main_profile.html
@@ -95,7 +95,7 @@ nethzName
         <div class="col-sm">
             <h2>
                 Comments
-                <a href="/main_profile_edit.html" class="btn btn-primary float-md-right" style="margin:5px">Add Comment</a>
+                <a href="/main_profile_edit.html?course_id={{course_id}}&ta_id={{ta_id}}" class="btn btn-primary float-md-right" style="margin:5px">Add Comment</a>
             </h2>
             <div class="card-rows">
                 {% for comment in comments %}
