--- a/webserver/templates/main_profile_edit.html
+++ b/webserver/templates/main_profile_edit.html
@@ -105,12 +105,7 @@ nethzName
 -->
 <script>
     <!-- Used for sending rating selection -->
-    var EXERCISE_ID = {
-    {
-        exercise_id
-    }
-    }
-    ;
+    var EXERCISE_ID = {{exercise_id}};
 
     function onRatingSelected() {
         // send a list of tuples of (exercise_id, rating_title, rating_value)
