--- a/webserver/templates/main_profile_edit.html
+++ b/webserver/templates/main_profile_edit.html
@@ -210,7 +210,7 @@ function onCommentSubmit(){
                         <footer class="blockquote-footer">{{nethzName}}</footer>
                     </div>
                     <div class="container-fluid">
-                        <a href="#" onclick="onCommentSubmit" class="btn btn-primary float-md-right" style="margin:5px">Save
+                        <a href="#" onclick="onCommentSubmit()" class="btn btn-primary float-md-right" style="margin:5px">Save
                         </a>
                     </div>
                 </div>
