--- a/webserver/templates/course.html
+++ b/webserver/templates/course.html
@@ -50,6 +50,9 @@
                 <a class="nav-link" href="#">My Feedback</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/static/userLogin.html">NETHZ Login</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/static/adminPage.html">Admin</a>
             </li>
 
