--- a/webserver/templates/main_profile.html
+++ b/webserver/templates/main_profile.html
@@ -54,6 +54,9 @@ nethzName
                 <a class="nav-link" href="#">My Feedback</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/static/userLogin.html">NETHZ Login</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/static/adminPage.html">Admin</a>
             </li>
 
