--- a/webserver/templates/course.html
+++ b/webserver/templates/course.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="/static/userLogin.html">NETHZ Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/static/adminPage.html">Admin</a>
+                <a class="nav-link" href="/adminPage">Admin</a>
             </li>
 
         </ul>
