--- a/webserver/templates/courses.html
+++ b/webserver/templates/courses.html
@@ -51,7 +51,7 @@
                 <a class="nav-link" href="/static/userLogin.html">NETHZ Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/static/adminPage.html">Admin</a>
+                <a class="nav-link" href="/adminPage.html">Admin</a>
             </li>
 
         </ul>
