--- a/webserver/templates/main_profile.html
+++ b/webserver/templates/main_profile.html
@@ -57,7 +57,7 @@ nethzName
                 <a class="nav-link" href="/static/userLogin.html">NETHZ Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/static/adminPage.html">Admin</a>
+                <a class="nav-link" href="/adminPage">Admin</a>
             </li>
 
         </ul>
