--- a/webserver/templates/main_profile_edit.html
+++ b/webserver/templates/main_profile_edit.html
@@ -65,7 +65,7 @@ TA_id
                 <a class="nav-link" href="/static/userLogin.html">NETHZ Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/static/adminPage.html">Admin</a>
+                <a class="nav-link" href="/adminPage">Admin</a>
             </li>
 
         </ul>
