made edit/back button align right

--- a/webserver/templates/main_profile.html
+++ b/webserver/templates/main_profile.html
@@ -69,7 +69,7 @@ nethzName
     </div>
 </nav>
 
-<div class="row w-100 align-items-center">
+<div class="row w-100 align-items-center justify-content-between">
     <p class="h1" style="padding: 20px"> {{ TA_name }} - {{ lecture }}</p>
     <a href="/main_profile_edit.html?course_id={{course_id}}&TA_id={{TA_id}}" class="btn btn-primary float-md-right">Add Feedback</a>
 </div>
